feat: 新增側邊欄

--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -1,3 +1,11 @@
 :root {
   --cafe-color-white: #ffffff;
+  --cafe--color-bisque: #fef8ea;
+  --cafe--color-brown: #7f252e;
+  --cafe-radius-xxs: 0.5rem;
+  --cafe-radius-xs: 0.8rem;
+  --cafe-radius-sm: 1rem;
+  --cafe-radius-md: 1.5rem;
+  --cafe-radius-lg: 2rem;
+  --cafe-radius-xl: 3rem;
 }
