feat: 新增關於頁面、搜尋框組件
1. 下拉式選單做一半
2. 調整navbar

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,13 +1,16 @@
 :root {
   --cafe-color-white: #ffffff;
-  --cafe--color-bisque: #fef8ea;
-  --cafe--color-brown: #7f252e;
+  --cafe-color-bisque: #fef8ea;
+  --cafe-color-brown: #7f252e;
+  --cafe-color-brown-lighter: rgba(98, 27, 34, 0.21);
   --cafe-radius-xxs: 0.5rem;
   --cafe-radius-xs: 0.8rem;
   --cafe-radius-sm: 1rem;
   --cafe-radius-md: 1.5rem;
   --cafe-radius-lg: 2rem;
   --cafe-radius-xl: 3rem;
+  --cafe--font-xs: 0.8rem;
+  --cafe--font-sm: 1.2rem;
 }
 
 *,
