--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,5 +1,6 @@
 :root {
   --cafe-color-white: #ffffff;
+  --cafe-color-transparent:#FFFDF9;
   --cafe-color-bisque: #fef8ea;
   --cafe-color-brown: #7f252e;
   --cafe-color-brown-lighter: rgba(98, 27, 34, 0.21);
