--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -12,6 +12,7 @@
   --cafe-radius-lg: 2rem;
   --cafe-radius-xl: 3rem;
 
-  --cafe--font-xs: 0.8rem;
-  --cafe--font-sm: 1.2rem;
+  --cafe--font-xs: 0.9rem;
+  --cafe--font-sm: 1rem;
+  --cafe--font-md: 1.2rem;
 }
