--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -10,8 +10,9 @@
   --cafe-radius-md: 1.3rem;
   --cafe-radius-lg: 2rem;
   --cafe-radius-xl: 3rem;
-  --cafe--font-xs: 0.8rem;
-  --cafe--font-sm: 1.2rem;
+  --cafe--font-xs: 0.9rem;
+  --cafe--font-sm: 1rem;
+  --cafe--font-md: 1.2rem;
 }
 
 .opacity-enter-from,
@@ -60,13 +61,32 @@ html {
   overflow: hidden;
   line-height: 1.5;
   font-family: "Poppins", "Noto Sans TC", Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 62.5%;
   font-weight: 500;
   font-synthesis: none;
   font-optical-sizing: auto;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+@media (max-width: 1366px) {
+  html {
+    font-size: 62.5%;
+  }
+}
+@media (max-width: 575.98px) {
+  html {
+    font-size: 50%;
+  }
+}
+@media (max-width: 375px) {
+  html {
+    font-size: 37.5%;
+  }
+}
+@media (min-width: 1367px) {
+  html {
+    font-size: 75%;
+  }
 }
 
 body,
