feat: 新增滾動軸json
1. 新增判斷

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --cafe-color-white: #ffffff;
   --cafe-color-transparent:#FFFDF9;
@@ -150,4 +151,98 @@ a {
 
 img {
   display: block;
+}
+
+.User__side-left, .User__side-right, .User__side-label li {
+  display: flex;
+  border-radius: var(--cafe-radius-md);
+  border: 0.1rem solid var(--cafe-color-brown-lighter);
+  transition: all 0.35s ease-in-out;
+}
+
+.User__container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 3rem 3rem 0;
+  gap: 1rem;
+  overflow-x: hidden;
+}
+.User__side {
+  top: 8.5rem;
+  z-index: 1;
+}
+.User__side-label {
+  display: flex;
+  gap: 1rem;
+  padding: 0.5rem 1rem;
+  overflow-x: auto;
+  scrollbar-width: none;
+}
+.User__side-label li {
+  flex-direction: column;
+  align-items: center;
+  padding: 0.8rem;
+  color: var(--cafe-color-brown-lighter);
+  background-color: var(--cafe-color-transparent);
+  cursor: pointer;
+}
+.User__side-label li:active, .User__side-label li:hover {
+  color: var(--cafe-color-brown);
+  border: 0.1rem solid var(--cafe-color-brown);
+  background-color: var(--cafe-color-white);
+}
+.User__side-label li img {
+  max-width: 100%;
+  height: 4rem;
+  width: 5rem;
+  margin-bottom: 0.5rem;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.User__side-label li h5 {
+  font-size: var(--cafe--font-xs);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 7ch;
+}
+.User__side-label-margin {
+  margin: 0 3rem;
+}
+.User__side-left, .User__side-right {
+  position: absolute;
+  top: 50%;
+  padding: 0.7rem;
+  border: 0.1rem solid var(--cafe-color-brown);
+  background-color: var(--cafe-color-white);
+  color: var(--cafe-color-brown);
+  transform: translateY(-50%);
+  cursor: pointer;
+  z-index: 10;
+}
+.User__side-left:hover, .User__side-right:hover {
+  color: var(--cafe-color-white);
+  background-color: var(--cafe-color-brown);
+}
+.User__side-left svg, .User__side-right svg {
+  width: 1rem;
+  height: 1rem;
+}
+.User__side-left {
+  transform: rotate(180deg) translateY(50%);
+  left: 0;
+}
+.User__side-right {
+  right: 0;
+}
+
+.menu__content {
+  overflow-y: auto;
+  max-width: 100%;
+  max-height: calc(100vh - 20rem);
+  scrollbar-width: none;
+}
+.menu__content::-webkit-scrollbar {
+  width: 0; /* 隱藏滾動條寬度 */
 }/*# sourceMappingURL=style.css.map */
