fix: 修正json、css

--- a/src/assets/css/_home.scss
+++ b/src/assets/css/_home.scss
@@ -97,6 +97,9 @@
       font-size: 1.8rem;
       line-height: 1.5;
     }
+    h3 {
+      font-size: 1.4rem;
+    }
     ul {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
