--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -276,6 +276,9 @@ img {
   font-size: 1.8rem;
   line-height: 1.5;
 }
+.menu__content h3 {
+  font-size: 1.4rem;
+}
 .menu__content ul {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
