--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -2,6 +2,7 @@
   --cafe-color-white: #ffffff;
   --cafe-color-transparent:#FFFDF9;
   --cafe-color-bisque: #fef8ea;
+  --cafe-color-gray: #f2f2f2;
   --cafe-color-brown: #7f252e;
   --cafe-color-brown-lighter: rgba(98, 27, 34, 0.21);
 
