--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
 :root {
   --cafe-color-white: #ffffff;
-  --cafe-color-transparent:#FFFDF9;
+  --cafe-color-transparent: #fffdf9;
   --cafe-color-bisque: #fef8ea;
+  --cafe-color-gray: #f2f2f2;
   --cafe-color-brown: #7f252e;
   --cafe-color-brown-lighter: rgba(98, 27, 34, 0.21);
   --cafe-radius-xxs: 0.5rem;
@@ -39,38 +40,14 @@
 
 .move-in-enter-active,
 .move-in-leave-active {
-  transition: opacity 0.35s cubic-bezier(0.5, 0, 0.5, 1), transform 0.35s cubic-bezier(0.5, 0, 0.5, 1);
+  transition: opacity 0.35s cubic-bezier(0.5, 0, 0.5, 1),
+    transform 0.35s cubic-bezier(0.5, 0, 0.5, 1);
 }
 
 .move-in-enter-to,
 .move-in-leave-from {
   opacity: 1;
   transform: translateY(0);
-}
-
-.fade-enter-active,
-.fade-leave-active {
-  transition: opacity 0.5s ease, transform 0.5s ease;
-}
-
-.fade-enter-from {
-  opacity: 0; /* 開始時透明 */
-  transform: translateX(100%); /* 從左側移入 */
-}
-
-.fade-enter-to {
-  opacity: 1; /* 結束時不透明 */
-  transform: translateX(0); /* 回到原位 */
-}
-
-.fade-leave-from {
-  opacity: 1; /* 開始時不透明 */
-  transform: translateX(0); /* 保持在原位 */
-}
-
-.fade-leave-to {
-  opacity: 0; /* 結束時透明 */
-  transform: translateX(100%); /* 向右側移出 */
 }
 
 *,
@@ -86,7 +63,8 @@ html {
   width: 100vw;
   overflow: hidden;
   line-height: 1.5;
-  font-family: "Poppins", "Noto Sans TC", Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Poppins", "Noto Sans TC", Inter, Avenir, Helvetica, Arial,
+    sans-serif;
   font-weight: 500;
   font-synthesis: none;
   font-optical-sizing: auto;
@@ -178,7 +156,10 @@ img {
   display: block;
 }
 
-.menu__content li, .User__side-left, .User__side-right, .User__side-label li {
+.menu__content li,
+.User__side-left,
+.User__side-right,
+.User__side-label li {
   display: flex;
   border-radius: var(--cafe-radius-md);
   border: 0.1rem solid var(--cafe-color-brown-lighter);
@@ -213,7 +194,8 @@ img {
   cursor: pointer;
   z-index: 1;
 }
-.User__side-label li:active, .User__side-label li:hover {
+.User__side-label li:active,
+.User__side-label li:hover {
   color: var(--cafe-color-brown);
   border: 0.1rem solid var(--cafe-color-brown);
   background-color: var(--cafe-color-white);
@@ -224,7 +206,7 @@ img {
   width: 5rem;
   margin-bottom: 0.5rem;
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
 }
 .User__side-label li h5 {
   font-size: var(--cafe--font-xs);
@@ -236,7 +218,8 @@ img {
 .User__side-label-margin {
   margin: 0 3rem;
 }
-.User__side-left, .User__side-right {
+.User__side-left,
+.User__side-right {
   position: absolute;
   top: 50%;
   padding: 0.7rem;
@@ -246,11 +229,13 @@ img {
   transform: translateY(-50%);
   cursor: pointer;
 }
-.User__side-left:hover, .User__side-right:hover {
+.User__side-left:hover,
+.User__side-right:hover {
   color: var(--cafe-color-white);
   background-color: var(--cafe-color-brown);
 }
-.User__side-left svg, .User__side-right svg {
+.User__side-left svg,
+.User__side-right svg {
   width: 1rem;
   height: 1rem;
 }
@@ -283,7 +268,7 @@ img {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
   gap: 1.5rem;
-  margin-top: 2rem;
+  margin: 2rem 0;
 }
 .menu__content li {
   background-color: var(--cafe-color-white);
@@ -315,7 +300,7 @@ img {
   height: 10rem;
   width: 10rem;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .menu__content svg {
   position: relative;
@@ -346,14 +331,25 @@ img {
   flex-direction: row !important;
   margin: 0 !important;
 }
+.menu__btn-content div {
+  display: flex;
+  width: 1.5rem;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
 .menu__btn-num {
   height: 1.5rem;
   width: 1.5rem;
   font-size: 1.5rem;
   color: var(--cafe-color-brown);
 }
+.menu__btn-trash {
+  padding-top: 0.1rem;
+  text-align: center;
+}
 .menu__btn-trash svg {
-  height: 1.5rem;
+  width: 1.2rem;
 }
 .menu__btn-add {
   position: relative;
@@ -366,4 +362,4 @@ img {
   width: 2.5rem;
   bottom: -6%;
   right: -60%;
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
