feat: 新增UserPopup 頁面
1. 新增json

--- a/src/assets/css/_mixin.scss
+++ b/src/assets/css/_mixin.scss
@@ -5,3 +5,9 @@
     transition: all 0.35s ease-in-out;
   }
   
+
+  %Popup-base-setting{
+    display: flex;
+    border-radius: var(--cafe-radius-sm);
+    background: var(--cafe-color-white);
+  }
