--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -5,6 +5,7 @@
   --cafe-color-gray: #f2f2f2;
   --cafe-color-brown: #7f252e;
   --cafe-color-brown-lighter: rgba(98, 27, 34, 0.21);
+  --cafe-color-background: rgba(0, 0, 0, 0.3);
 
   --cafe-radius-xxs: 0.5rem;
   --cafe-radius-xs: 0.8rem;
