--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -17,4 +17,8 @@
   --cafe--font-xs: 0.9rem;
   --cafe--font-sm: 1rem;
   --cafe--font-md: 1.2rem;
+  --cafe--font-lg: 1.4rem;
+
+  --cafe--padding-xs: 1rem;
+  --cafe--padding-sm: 2rem;
 }
